adds public ip address for #226
